--- a/ScreenRecognition.Desktop/App.xaml
+++ b/ScreenRecognition.Desktop/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:ScreenRecognition.Desktop"
              StartupUri="View/Windows/MainWindow.xaml">
     <Application.Resources>
-         
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/SkinDefault.xaml" />
+                <ResourceDictionary Source="pack://application:,,,/HandyControl;component/Themes/Theme.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
