--- a/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
+++ b/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
@@ -35,11 +35,11 @@
                 <Button Content="Получить текст с фото"
                         Margin="0 0 5 0"
                         x:Name="TextFromPhoto"
-                        Click="NavigateButtons_Click"/>
+                        Click="NavigateButtons_Click" />
                 <Button Content="История переводов"
                         Margin="0 0 5 0"
                         x:Name="TranslateHistory"
-                        Click="NavigateButtons_Click"/>
+                        Click="NavigateButtons_Click" />
             </StackPanel>
             <StackPanel Orientation="Horizontal"
                         DockPanel.Dock="Right"
@@ -50,6 +50,7 @@
             </StackPanel>
         </DockPanel>
         <Frame Grid.Row="1"
-                />
+               Content="{Binding CurrentPage.Content}"
+               NavigationUIVisibility="Hidden" />
     </Grid>
 </Window>
