--- a/ScreenRecognition.Desktop/View/Pages/TranslateHistoryPage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/TranslateHistoryPage.xaml
@@ -1,13 +1,17 @@
-﻿<Page x:Class="ScreenRecognition.Desktop.View.Pages.TranslateHistoryPage"
-      xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
+﻿<Page xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:local="clr-namespace:ScreenRecognition.Desktop.View.Pages"
+      xmlns:ViewModel="clr-namespace:ScreenRecognition.Desktop.ViewModel"
+      x:Class="ScreenRecognition.Desktop.View.Pages.TranslateHistoryPage"
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
       Title="TranslateHistoryPage">
+    <Page.DataContext>
+        <ViewModel:TranslateHistoryPageViewModel />
+    </Page.DataContext>
     <Grid>
         <TextBlock Text="HistoryPage" />
     </Grid>
