--- a/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/SettingsPage.xaml
@@ -196,7 +196,7 @@
                            FontSize="20" />
                 <StackPanel Orientation="Vertical"
                             Margin="0 5 0 0">
-                    <TextBlock Text="Перевод текста"
+                    <TextBlock Text="Переводчик"
                                HorizontalAlignment="Center"
                                FontSize="20" />
                     <DockPanel LastChildFill="False">
