--- a/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
+++ b/ScreenRecognition.Desktop/View/Pages/HistoryAndTranslatePage.xaml
@@ -5,7 +5,7 @@
       xmlns:local="clr-namespace:ScreenRecognition.Desktop.View.Pages"
       xmlns:ViewModel="clr-namespace:ScreenRecognition.Desktop.ViewModel"
       xmlns:hc="https://handyorg.github.io/handycontrol"
-      x:Class="ScreenRecognition.Desktop.View.Pages.TranslateHistoryPage"
+      x:Class="ScreenRecognition.Desktop.View.Pages.HistoryAndTranslatePage"
       mc:Ignorable="d"
       d:DesignHeight="450"
       d:DesignWidth="800"
