--- a/ScreenRecognition.Desktop/View/Windows/SignInWindow.xaml
+++ b/ScreenRecognition.Desktop/View/Windows/SignInWindow.xaml
@@ -7,7 +7,6 @@
         xmlns:ViewModel="clr-namespace:ScreenRecognition.Desktop.ViewModel"
         x:Class="ScreenRecognition.Desktop.View.Windows.SignInWindow"
         mc:Ignorable="d"
-        Visibility="{Binding CurrentWindowVisibility}"
         Title="Авторизация"
         WindowStartupLocation="CenterScreen"
         ResizeMode="CanMinimize"
@@ -16,7 +15,8 @@
         MaxHeight="320"
         Width="250"
         MinWidth="250"
-        MaxWidth="250">
+        MaxWidth="250"
+        IsEnabled="{Binding EnabledWindowStatus}">
     <Window.DataContext>
         <ViewModel:SignInWindowViewModel />
     </Window.DataContext>
@@ -33,6 +33,7 @@
                     <hc:TextBox Margin="5"
                                 FontSize="14"
                                 x:Name="Login"
+                                Text="{Binding Login}"
                                 hc:InfoElement.Placeholder="Логин"
                                 VerticalContentAlignment="Center"
                                 HorizontalContentAlignment="Left" />
@@ -56,7 +57,8 @@
                            Margin="0 30 0 0"
                            DockPanel.Dock="Top">
                     <Button DockPanel.Dock="Left"
-                            x:Name="Authorize"
+                            x:Name="SignIn"
+                            Click="SignIn_Click"
                             Margin="5"
                             Content="Войти"
                             Width="100"
@@ -64,6 +66,7 @@
                     <Button DockPanel.Dock="Right"
                             x:Name="SignUp"
                             Width="100"
+                            Click="SignUp_Click"
                             Margin="5"
                             Content="Регистрация"
                             BorderBrush="#FF4862F1" />
