--- a/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
+++ b/ScreenRecognition.Desktop/View/Windows/MainWindow.xaml
@@ -14,7 +14,7 @@
         MinHeight="450"
         Width="1000"
         MinWidth="800"
-        Closed="Window_Closed">
+        Closing="Window_Closing">
     <Window.DataContext>
         <ViewModel:MainWindowViewModel />
     </Window.DataContext>
